--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // Facebook
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 
     //Android Material Stepper
     compile 'com.stepstone.stepper:material-stepper:4.1.0'
