--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ android {
     buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId 'com.softmarshmallow.foodle'
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 26
-        versionCode 11
+        multiDexEnabled true
+        versionCode 15
         versionName '0.0.7'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
         /* jackOptions {
              enabled true
          }*/
@@ -57,15 +57,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     // Facebook
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
-
-    //Android Material Stepper
-    compile 'com.stepstone.stepper:material-stepper:4.1.0'
-    //Vertical Stepper Form Library
-    compile 'com.ernestoyaquello.stepperform:vertical-stepper-form:0.9.9'
     //WaveSwipeRefreshLayout
     compile 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
     // Slidr
@@ -76,9 +69,6 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.3.0'
     // MaterialRatingBar
     compile 'me.zhanghai.android.materialratingbar:library:1.0.2'
-    // LeakCanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
     //Sweet Alert Dialog
     compile 'cn.pedant.sweetalert:library:1.3'
     //Android image Slider
@@ -99,7 +89,6 @@ dependencies {
     compile 'com.github.DanielMartinus:Stepper-Touch:0.6'
     // Badge
     compile 'com.github.matrixxun:MaterialBadgeTextView:c5a27e8243'
-
     // Like Button
     compile 'com.github.jd-alexander:LikeButton:0.2.2'
     // Pull to refresh
@@ -111,15 +100,20 @@ dependencies {
         exclude module: "support-v13"
     }
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:2.4.0"
+
+    /*
     // RotatingText
     compile 'com.sdsmdg.harjot:rotatingtext:1.0.2'
+    */
+
+    /*
     // Lottie
     compile 'com.airbnb.android:lottie:2.2.0'
+    */
 
     //FlowingDrawer
     compile 'com.mxn.soul:flowingdrawer-core:2.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
-
     // Navigation Tab Bar
     compile 'devlight.io:navigationtabbar:1.2.5'
     // android image slider
@@ -142,6 +136,7 @@ dependencies {
     // Image Picker
     compile 'com.kbeanie:multipicker:1.1.31@aar'
     compile 'com.ms-square:expandableTextView:0.1.4'
+    // multi dex
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
