--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
 
     <application
         android:name=".FoodleApp"
@@ -44,6 +46,7 @@
 
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
 
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
@@ -87,16 +90,6 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".Views.StoreCreator_Deprecated.MenuCreatorActivity_Deprecated"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity
-            android:name=".Views.StoreCreator_Deprecated.StoreCreatorActivity_Deprecated"
-            android:label="@string/title_activity_store_creator_v2"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme">
-        </activity>
-        <activity
             android:name=".Views.Test.TestActivity"
             android:screenOrientation="portrait">
         </activity>
@@ -136,6 +129,8 @@
         <activity android:name=".Views.MenuEditor.MenuCreatorActivity">
         </activity>
         <activity android:name=".Views.StoreEditor.StoreCreatorActivity">
+        </activity>
+        <activity android:name=".Views.StoreEditor.StoreUpdaterActivity">
         </activity>
     </application>
 
