--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,12 +99,16 @@ dependencies {
 
     // validation Lib
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
+/*
 
-
-    //  QR Code
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    //  ZXing Android Embedded
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+*/
 
+    // QRCodeReaderView
+    compile('com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3@aar') {
+        transitive = true
+    }
     // Image Picker
     compile 'com.kbeanie:multipicker:1.1.31@aar'
 
@@ -183,6 +187,11 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.6.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
