--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName '0.1.3.20'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+
     }
 
     dexOptions {
@@ -121,8 +122,8 @@ dependencies {
     // MaterialRatingBar
     compile 'me.zhanghai.android.materialratingbar:library:1.0.2'
 
-    //
-
+    //Nexmo
+    compile 'com.nexmo:verify:4.0.0'
     //region Essential
 
     //
