--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
 
-    //
+
+    //Drag and drop to reorderable ListView
+    compile 'com.github.woxthebox:draglistview:1.5.2'
 
     // validation Lib
     compile 'com.mobsandgeeks:android-saripaar:2.0.3'
