--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.softmarshmallow.foodle">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.softmarshmallow.foodle">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- Permission has to be GRANTED -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:name=".FoodleApp"
@@ -29,96 +29,98 @@
         tools:replace="android:icon">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/GoogleApiKey" />
+            android:value="@string/GoogleApiKey"/>
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook_app_id"/>
 
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data android:scheme="@string/fb_login_protocol_scheme" />
+                <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".Views.Splash.SplashScreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".Views.Login.LoginActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Login.SignupActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.MainTabController.MainTabControllerActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Festival.FestivalCreatorActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Mypage.Shared.StoresListViewActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.StoreDetail.StoreDetailViewActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.StoreDetail.StoreReview.StoreReviewCreaterActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Test.TestActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Test.TestNavigationDrawerActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".Views.OrderMenu.OrderMenuActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Festival.FestivalDetailViewActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Views.RequestCatering.RequestCateringActivity"></activity>
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Views.RequestCatering.RequestCateringActivity"/>
         <activity
             android:name=".Views.AppIntro.AppIntroActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".Views.StoreEditor.StoreEditorBaseActivity"
-            android:screenOrientation="portrait"></activity>
+            android:name=".Views.StoreEditor_Deprecated.StoreEditorBaseActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.Mypage.ProfileEditorActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".Views.MenuEditor.MenuEditorBaseActivity"></activity>
-        <activity android:name=".Views.MenuDetailPage.MenuDetailActivity"></activity>
-        <activity android:name=".Views.StoreEditor.StoreMenusEditorActivity"></activity>
-        <activity android:name=".Views.MenuEditor.MenuCreatorActivity"></activity>
-        <activity android:name=".Views.StoreEditor.StoreCreatorActivity"></activity>
-        <activity android:name=".Views.StoreEditor.StoreUpdaterActivity"></activity>
-        <activity android:name=".Views.Test.TestMapsActivity"></activity>
-        <activity android:name=".Views.StoreMapsView.StoreMapsViewActivity"></activity>
-        <activity android:name=".Views.FoodtruckOwnerTabView.FoodtruckOwnerTabControllerActivity"></activity>
-        <activity android:name=".Views.OrderMenu.OrderSheetActivity"></activity>
-        <activity android:name=".Views.QR_ReaderView.QR_ReaderActivity"></activity>
-        <activity android:name=".Views.SMSVerification.SMSVerification_PhoneNumberEnterViewActivity"></activity>
-        <activity android:name=".Views.SMSVerification.SMSVerification_PinCodeEnterViewActivity"></activity>
-        <activity android:name=".Views.PhotoSelectorView.PhotoSelectorActivity"></activity>
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Views.MenuEditor.MenuEditorBaseActivity"/>
+        <activity android:name=".Views.MenuDetailPage.MenuDetailActivity"/>
+        <activity android:name=".Views.StoreEditor_Deprecated.StoreMenusEditorActivity"/>
+        <activity android:name=".Views.MenuEditor.MenuCreatorActivity"/>
+        <activity android:name=".Views.StoreEditor_Deprecated.StoreCreatorActivity"/>
+        <activity android:name=".Views.StoreEditor_Deprecated.StoreUpdaterActivity"/>
+        <activity android:name=".Views.Test.TestMapsActivity"/>
+        <activity android:name=".Views.StoreMapsView.StoreMapsViewActivity"/>
+        <activity android:name=".Views.FoodtruckOwnerTabView.FoodtruckOwnerTabControllerActivity"/>
+        <activity android:name=".Views.OrderMenu.OrderSheetActivity"/>
+        <activity android:name=".Views.QR_ReaderView.QR_ReaderActivity"/>
+        <activity android:name=".Views.SMSVerification.SMSVerification_PhoneNumberEnterViewActivity"/>
+        <activity android:name=".Views.SMSVerification.SMSVerification_PinCodeEnterViewActivity"/>
+        <activity android:name=".Views.PhotoSelectorView.PhotoSelectorActivity"/>
+        <activity android:name=".Views.StoreEditorV3.StoreEditorLandingPageActivity">
+        </activity>
     </application>
 
 </manifest>
