--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         <activity android:name=".Views.SMSVerification.SMSVerification_PhoneNumberEnterViewActivity"/>
         <activity android:name=".Views.SMSVerification.SMSVerification_PinCodeEnterViewActivity"/>
         <activity android:name=".Views.PhotoSelectorView.PhotoSelectorActivity"/>
+        <activity android:name=".Views.PhotoSelectorView.PhotoSelectorFirstActivity"/>
         <activity android:name=".Views.StoreEditorV3.StoreEditorLandingPage.StoreEditorLandingPageActivity">
         </activity>
         <activity android:name=".Views.StoreEditorV3.StoreBasicInfoFormsPage.StoreBasicFormsActivity">
