--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,11 @@ dependencies {
         transitive = true
     }
 
+    //Advanced RecyclerView
+    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar'){
+        transitive=true
+    }
+
     // discreteSeekBar
     compile 'org.adw.library:discrete-seekbar:1.0.1'
 
