드래그 태스트 추가, 코드정리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,7 @@
         </activity>
         <activity android:name=".Views.MenuEditorV3.MenuEditorLandingPage.MenuEditorLandingPageActivity">
         </activity>
+        <activity android:name=".Views.Test.DragListTest.MinimalDraggableExampleActivity"/>
     </application>
 
 </manifest>
