--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     }
 
     //Advanced RecyclerView
-    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar'){
-        transitive=true
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar') {
+        transitive = true
     }
 
     // discreteSeekBar
@@ -78,6 +78,9 @@ dependencies {
 
     //number Stepper touch
     compile 'com.github.DanielMartinus:Stepper-Touch:0.6'
+
+    //Android Material Stepper
+    compile 'com.stepstone.stepper:material-stepper:4.3.1'
 
     // Badge
     compile 'com.github.matrixxun:MaterialBadgeTextView:c5a27e8243'
@@ -198,6 +201,9 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.6.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
 
 
 
