--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- Permission has to be GRANTED -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
@@ -24,6 +24,8 @@
         android:allowBackup="true"
         android:icon="@drawable/app_icon_red_v3"
         android:label="@string/app_name"
+        android:largeHeap="true"
+        android:hardwareAccelerated="false"
         android:roundIcon="@drawable/app_icon_red_v3"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -69,6 +71,9 @@
         <activity
             android:name=".Views.Login.SignupActivity"
             android:screenOrientation="portrait"/>
+        <activity
+        android:name=".Views.PhotoSelectorView.PhotoQueueEditerActivity"
+        android:screenOrientation="portrait"/>
         <activity
             android:name=".Views.MainTabController.MainTabControllerActivity"
             android:screenOrientation="portrait"/>
