--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,6 +138,8 @@
         </activity>
         <activity android:name=".Views.MenuEditorV3.MenuBasicFormsPage.MenuBasicFormsPageActivity">
         </activity>
+        <activity android:name=".Views.MenuEditorV3.MenuExtraSettingsFormLandingPage.MenuExtraSettingsFormLandingPageActivity">
+        </activity>
     </application>
 
 </manifest>
