--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,6 +138,9 @@
         </activity>
         <activity android:name=".Views.MenuEditorV3.MenuExtraSettingsFormLandingPage.MenuExtraSettingsFormLandingPageActivity">
         </activity>
+        <activity
+            android:name=".Views.StoreUploadRequestView.StoreUploadRequestActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
