--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    //floating action button
+    compile 'com.robertlevonyan.view:CustomFloatingActionButton:2.0.4'
+
     // DiscreteScrollView
     compile 'com.yarolegovich:discrete-scrollview:1.3.0'
 
