--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
 
     signingConfigs {
+        config {
+        }
     }
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -12,8 +14,8 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         multiDexEnabled true
-        versionCode 23
-        versionName '0.1.3.21'
+        versionCode 24
+        versionName '0.1.4.1'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
